force-app/main/default/objects/Case/fields/Accessory_Property_DD__c.field-meta.xml
<CustomField>
    <fullName>Accessory_Property_DD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field created at User Story SWSS-648</description>
    <label>Imóvel  Acessório</label>
    <type>Checkbox</type>
</CustomField>