force-app/main/default/objects/Case/fields/ActiveUser__c.field-meta.xml
<CustomField>
    <fullName>ActiveUser__c</fullName>
    <formula>Owner:User.IsActive = true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usuário Ativo?</label>
    <type>Checkbox</type>
</CustomField>