force-app/main/default/objects/Case/fields/Address_Cognito__c.field-meta.xml
<CustomField>
    <fullName>Address_Cognito__c</fullName>
    <description>Endereço para o o tipo de caso Aditivo Mão Dupla que vem do cognito</description>
    <label>Endereço (Cognito)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>