force-app/main/default/objects/Case/fields/AgentRepublishedWithPP__c.field-meta.xml
<CustomField>
    <fullName>AgentRepublishedWithPP__c</fullName>
    <label>Agente republicou com PP?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>