force-app/main/default/objects/Case/fields/AlreadyAskedForApproval__c.field-meta.xml
<CustomField>
    <fullName>AlreadyAskedForApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>(IQ) Já solicitou aprovação do PP?</label>
    <type>Checkbox</type>
</CustomField>