force-app/main/default/objects/Case/fields/AlreadyContested__c.field-meta.xml
<CustomField>
    <fullName>AlreadyContested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Já foi contestado antes?</label>
    <type>Checkbox</type>
</CustomField>