force-app/main/default/objects/Case/fields/Analyst__c.field-meta.xml
<CustomField>
    <fullName>Analyst__c</fullName>
    <formula>Owner:User.FirstName+ &apos; &apos;+Owner:User.LastName+Owner:Queue.QueueName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Analista Atribuído</label>
    <type>Text</type>
</CustomField>