force-app/main/default/objects/Case/fields/AnalystQueue__c.field-meta.xml
<CustomField>
    <fullName>AnalystQueue__c</fullName>
    <description>Valor da fila vem do objeto intermediário Entrada Listing Quality</description>
    <label>Fila do Analista</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>