force-app/main/default/objects/Case/fields/AnalystRemarks__c.field-meta.xml
<CustomField>
    <fullName>AnalystRemarks__c</fullName>
    <description>Observações do analista</description>
    <label>Observação do Analista</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>