force-app/main/default/objects/Case/fields/BookkeepingDoneDate__c.field-meta.xml
<CustomField>
    <fullName>BookkeepingDoneDate__c</fullName>
    <label>Data da finalização da escrituração</label>
    <type>Date</type>
</CustomField>