force-app/main/default/objects/Case/fields/BYContactSuccess__c.field-meta.xml
<CustomField>
    <fullName>BYContactSuccess__c</fullName>
    <label>[BY] Contato teve sucesso?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>