force-app/main/default/objects/Case/fields/BYCurrentOnboardingContact__c.field-meta.xml
<CustomField>
    <fullName>BYCurrentOnboardingContact__c</fullName>
    <label>[BY] Contato Atual do Onboarding</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FIRST_CONTACT</fullName>
                <label>Primeiro Contato</label>
            </value>
            <value>
                <fullName>SECOND_CONTACT</fullName>
                <label>Segundo Contato</label>
            </value>
            <value>
                <fullName>THIRD_CONTACT</fullName>
                <label>Terceiro Contato</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>