force-app/main/default/objects/Case/fields/CaseCreationStartMilestone__c.field-meta.xml
<CustomField>
    <fullName>CaseCreationStartMilestone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Criação do Caso começa o marco</label>
    <type>Checkbox</type>
</CustomField>