force-app/main/default/objects/Case/fields/CaseCreationStartMilestoneClosed__c.field-meta.xml
<CustomField>
    <fullName>CaseCreationStartMilestoneClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Criação do Caso começa o marco Fecha</label>
    <type>Checkbox</type>
</CustomField>