force-app/main/default/objects/Case/fields/CaseDescription__c.field-meta.xml
<CustomField>
    <fullName>CaseDescription__c</fullName>
    <label>Resumo do Caso</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>