force-app/main/default/objects/Case/fields/CaseListViewUser__c.field-meta.xml
<CustomField>
    <fullName>CaseListViewUser__c</fullName>
    <formula>Escrivao__c  = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exibição Usuário</label>
    <type>Checkbox</type>
</CustomField>