force-app/main/default/objects/Case/fields/CaseShareCommunityPortal__c.field-meta.xml
<CustomField>
    <fullName>CaseShareCommunityPortal__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Compartilha com o Portal?</label>
    <type>Checkbox</type>
</CustomField>