force-app/main/default/objects/Case/fields/City_State_Cognito__c.field-meta.xml
<CustomField>
    <fullName>City_State_Cognito__c</fullName>
    <description>Cidade e Estado para o o tipo de caso Aditivo Mão Dupla que vem do cognito</description>
    <label>Cidade/Estado (Cognito)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>