force-app/main/default/objects/Case/fields/ClientPhone__c.field-meta.xml
<CustomField>
    <fullName>ClientPhone__c</fullName>
    <label>Telefone do Cliente</label>
    <type>Phone</type>
</CustomField>