force-app/main/default/objects/Case/fields/CollectionAddress__c.field-meta.xml
<CustomField>
    <fullName>CollectionAddress__c</fullName>
    <label>Endereço de Coleta</label>
    <type>Address</type>
</CustomField>