force-app/main/default/objects/Case/fields/CollectionAddressComplement__c.field-meta.xml
<CustomField>
    <fullName>CollectionAddressComplement__c</fullName>
    <label>Complemento de Coleta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>