force-app/main/default/objects/Case/fields/CollectionAvailableDate__c.field-meta.xml
<CustomField>
    <fullName>CollectionAvailableDate__c</fullName>
    <label>Data disponível para coleta</label>
    <type>Date</type>
</CustomField>