force-app/main/default/objects/Case/fields/CollectionAvailablePeriod__c.field-meta.xml
<CustomField>
    <fullName>CollectionAvailablePeriod__c</fullName>
    <label>Período disponível para coleta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Periods</valueSetName>
    </valueSet>
</CustomField>