force-app/main/default/objects/Case/fields/CollectionAvailableTime__c.field-meta.xml
<CustomField>
    <fullName>CollectionAvailableTime__c</fullName>
    <label>Horário mínimo disponível para coleta</label>
    <type>Time</type>
</CustomField>