force-app/main/default/objects/Case/fields/CollectionAvailableTimeMax__c.field-meta.xml
<CustomField>
    <fullName>CollectionAvailableTimeMax__c</fullName>
    <label>Horário máximo disponível para coleta</label>
    <type>Time</type>
</CustomField>