force-app/main/default/objects/Case/fields/CollectionReferencePoint__c.field-meta.xml
<CustomField>
    <fullName>CollectionReferencePoint__c</fullName>
    <label>Ponto de Referência de Coleta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>