force-app/main/default/objects/Case/fields/CollectionResponsibleName__c.field-meta.xml
<CustomField>
    <fullName>CollectionResponsibleName__c</fullName>
    <label>Nome do Responsável pela Coleta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>