force-app/main/default/objects/Case/fields/CollectionResponsiblePhone__c.field-meta.xml
<CustomField>
    <fullName>CollectionResponsiblePhone__c</fullName>
    <label>Telefone do Responsável pela Coleta</label>
    <type>Phone</type>
</CustomField>