force-app/main/default/objects/Case/fields/CollectionResponsibleRole__c.field-meta.xml
<CustomField>
    <fullName>CollectionResponsibleRole__c</fullName>
    <label>Papel do Responsável pela Coleta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>