force-app/main/default/objects/Case/fields/CommentsApproval__c.field-meta.xml
<CustomField>
    <fullName>CommentsApproval__c</fullName>
    <description>Comentário a ser enviado para o aprovador do caso.</description>
    <label>Comentários para Aprovação</label>
    <type>TextArea</type>
</CustomField>