force-app/main/default/objects/Case/fields/ContactDateTime__c.field-meta.xml
<CustomField>
    <fullName>ContactDateTime__c</fullName>
    <label>Data/Hora do Contato</label>
    <type>DateTime</type>
</CustomField>