force-app/main/default/objects/Case/fields/ContactReplyIQ__c.field-meta.xml
<CustomField>
    <fullName>ContactReplyIQ__c</fullName>
    <label>ContactReplyIQ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ContactTaskReply</valueSetName>
    </valueSet>
</CustomField>