force-app/main/default/objects/Case/fields/ContactReplyPP__c.field-meta.xml
<CustomField>
    <fullName>ContactReplyPP__c</fullName>
    <label>ContactReplyPP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pending</fullName>
            </value>
            <value>
                <fullName>success</fullName>
            </value>
            <value>
                <fullName>failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>