force-app/main/default/objects/Case/fields/ContactReplyVT__c.field-meta.xml
<CustomField>
    <fullName>ContactReplyVT__c</fullName>
    <label>ContactReplyVT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ContactTaskReply</valueSetName>
    </valueSet>
</CustomField>