force-app/main/default/objects/Case/fields/ContactSuccess__c.field-meta.xml
<CustomField>
    <fullName>ContactSuccess__c</fullName>
    <label>Contato teve sucesso?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NullableCheckbox</valueSetName>
    </valueSet>
</CustomField>