force-app/main/default/objects/Case/fields/ContestationResponsabilityValid__c.field-meta.xml
<CustomField>
    <fullName>ContestationResponsabilityValid__c</fullName>
    <label>Contestação de responsabilidade é devida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>