force-app/main/default/objects/Case/fields/ContractIdOddOrEven__c.field-meta.xml
<CustomField>
    <fullName>ContractIdOddOrEven__c</fullName>
    <formula>IF(
  ISBLANK(ContractId__c),
  &quot;Indefinido&quot;,
  IF(
    CASE(RIGHT(ContractId__c, 1),
      &quot;0&quot;, 1,
      &quot;2&quot;, 1,
      &quot;4&quot;, 1,
      &quot;6&quot;, 1,
      &quot;8&quot;, 1,
      0
    ) = 1,
    &quot;Par&quot;,
    &quot;Ímpar&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id do Contrato Par ou Ímpar</label>
    <type>Text</type>
</CustomField>