force-app/main/default/objects/Case/fields/ContractMagicLink__c.field-meta.xml
<CustomField>
    <fullName>ContractMagicLink__c</fullName>
    <formula>RelatedContract__r.MagicLinkContract__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Magic Link</label>
    <type>Text</type>
</CustomField>