force-app/main/default/objects/Case/fields/ContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>ContractStartDate__c</fullName>
    <formula>RelatedContract__r.StartDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de início de Vigência</label>
    <type>Date</type>
</CustomField>