force-app/main/default/objects/Case/fields/CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>CorrelationId__c</fullName>
    <description>Timestamp + CaseId</description>
    <label>Id de correlação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>