force-app/main/default/objects/Case/fields/CRIDoneDate__c.field-meta.xml
<CustomField>
    <fullName>CRIDoneDate__c</fullName>
    <label>Data da finalização do registro</label>
    <type>Date</type>
</CustomField>