force-app/main/default/objects/Case/fields/CRIPRENOTEDDate__c.field-meta.xml
<CustomField>
    <fullName>CRIPRENOTEDDate__c</fullName>
    <label>Data Prenotado</label>
    <type>Date</type>
</CustomField>