force-app/main/default/objects/Case/fields/criticality__c.field-meta.xml
<CustomField>
    <fullName>criticality__c</fullName>
    <label>Criticidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMERGENCY</fullName>
                <label>Altíssima</label>
            </value>
            <value>
                <fullName>URGENT</fullName>
                <label>Alta</label>
            </value>
            <value>
                <fullName>COMMON</fullName>
                <label>Média</label>
            </value>
            <value>
                <fullName>LOW</fullName>
                <label>Baixa</label>
            </value>
            <value>
                <fullName>VERY_LOW</fullName>
                <label>Baixíssima</label>
            </value>
            <value>
                <fullName>UNDEFINED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>