force-app/main/default/objects/Case/fields/CriticalitySla__c.field-meta.xml
<CustomField>
    <fullName>CriticalitySla__c</fullName>
    <label>SLA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>