force-app/main/default/objects/Case/fields/CRNStatus__c.field-meta.xml
<CustomField>
    <fullName>CRNStatus__c</fullName>
    <label>Status do CRN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CRNStatus</valueSetName>
    </valueSet>
</CustomField>