force-app/main/default/objects/Case/fields/CSATSurveySent__c.field-meta.xml
<CustomField>
    <fullName>CSATSurveySent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pesquisa CSAT Enviada</label>
    <type>Checkbox</type>
</CustomField>