force-app/main/default/objects/Case/fields/customerId__c.field-meta.xml
<CustomField>
    <fullName>customerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inquilino</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>