force-app/main/default/objects/Case/fields/CX_For_Rent__c.field-meta.xml
<CustomField>
    <fullName>CX_For_Rent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CX For Rent</label>
    <referenceTo>CX_For_Rent__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>