force-app/main/default/objects/Case/fields/DeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAddress__c</fullName>
    <label>Endereço de Entrega</label>
    <type>Address</type>
</CustomField>