force-app/main/default/objects/Case/fields/DeliveryAddressComplement__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAddressComplement__c</fullName>
    <label>Complemento de Entrega</label>
    <length>255</length>
    <type>Text</type>
</CustomField>