force-app/main/default/objects/Case/fields/DeliveryAvailableDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAvailableDate__c</fullName>
    <label>Data disponível para entrega</label>
    <type>Date</type>
</CustomField>