force-app/main/default/objects/Case/fields/DeliveryAvailablePeriod__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAvailablePeriod__c</fullName>
    <label>Período disponível para entrega</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Periods</valueSetName>
    </valueSet>
</CustomField>