force-app/main/default/objects/Case/fields/DeliveryNotesDropoff__c.field-meta.xml
<CustomField>
    <fullName>DeliveryNotesDropoff__c</fullName>
    <label>Observação de entrega</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>