force-app/main/default/objects/Case/fields/DeliveryNotesPickup__c.field-meta.xml
<CustomField>
    <fullName>DeliveryNotesPickup__c</fullName>
    <label>Observação de Coleta</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>