force-app/main/default/objects/Case/fields/DeliveryReferencePoint__c.field-meta.xml
<CustomField>
    <fullName>DeliveryReferencePoint__c</fullName>
    <label>Ponto de Referência de Entrega</label>
    <length>255</length>
    <type>Text</type>
</CustomField>