force-app/main/default/objects/Case/fields/DeliveryResponsibleName__c.field-meta.xml
<CustomField>
    <fullName>DeliveryResponsibleName__c</fullName>
    <label>Nome do Responsável pela Entrega</label>
    <length>255</length>
    <type>Text</type>
</CustomField>