force-app/main/default/objects/Case/fields/DeliveryResponsiblePhone__c.field-meta.xml
<CustomField>
    <fullName>DeliveryResponsiblePhone__c</fullName>
    <label>Telefone do Responsável pela Entrega</label>
    <type>Phone</type>
</CustomField>