force-app/main/default/objects/Case/fields/DeliveryResponsibleRole__c.field-meta.xml
<CustomField>
    <fullName>DeliveryResponsibleRole__c</fullName>
    <label>Papel do Responsável pela Entrega</label>
    <length>255</length>
    <type>Text</type>
</CustomField>