force-app/main/default/objects/Case/fields/DepartureInspectionDate__c.field-meta.xml
<CustomField>
    <fullName>DepartureInspectionDate__c</fullName>
    <formula>Inspection__r.ExecutedAt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data da Vistoria de Saída</label>
    <type>DateTime</type>
</CustomField>