force-app/main/default/objects/Case/fields/Diligence_Link_DD__c.field-meta.xml
<CustomField>
    <fullName>Diligence_Link_DD__c</fullName>
    <description>Field created at User Story SWSS-648</description>
    <label>Link da Diligência</label>
    <length>255</length>
    <type>Text</type>
</CustomField>