force-app/main/default/objects/Case/fields/DistributionModel__c.field-meta.xml
<CustomField>
    <fullName>DistributionModel__c</fullName>
    <label>Modelo de distribuição</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HefestoManual</fullName>
                <label>Hefesto + Manual</label>
            </value>
            <value>
                <fullName>HefestoOmniChannel</fullName>
                <label>Hefesto + OmniChannel</label>
            </value>
            <value>
                <fullName>Salesforce</fullName>
                <default>true</default>
                <label>Salesforce</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>