force-app/main/default/objects/Case/fields/DoNotTriggerCSAT__c.field-meta.xml
<CustomField>
    <fullName>DoNotTriggerCSAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Não Disparar CSAT</label>
    <type>Checkbox</type>
</CustomField>