force-app/main/default/objects/Case/fields/EntryAccess__c.field-meta.xml
<CustomField>
    <fullName>EntryAccess__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acesso de entrada</label>
    <referenceTo>EntryAccess__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>