force-app/main/default/objects/Case/fields/FlowSubType__c.field-meta.xml
<CustomField>
    <fullName>FlowSubType__c</fullName>
    <label>Subtipo do fluxo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FlowSubType</valueSetName>
    </valueSet>
</CustomField>