force-app/main/default/objects/Case/fields/followUpDescription__c.field-meta.xml
<CustomField>
    <fullName>followUpDescription__c</fullName>
    <label>Descrição do FollowUp</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>