force-app/main/default/objects/Case/fields/followUpExpectedResolutionDate__c.field-meta.xml
<CustomField>
    <fullName>followUpExpectedResolutionDate__c</fullName>
    <label>Data esperada de resolução</label>
    <type>Date</type>
</CustomField>