force-app/main/default/objects/Case/fields/followUpReassignDate__c.field-meta.xml
<CustomField>
    <fullName>followUpReassignDate__c</fullName>
    <label>Data de realocação</label>
    <type>Date</type>
</CustomField>