force-app/main/default/objects/Case/fields/followUpStatus__c.field-meta.xml
<CustomField>
    <fullName>followUpStatus__c</fullName>
    <label>Status do Follow Up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOLVED</fullName>
                <label>Solucionado</label>
            </value>
            <value>
                <fullName>ONGOING</fullName>
                <label>Em Andamento</label>
            </value>
            <value>
                <fullName>HELP_NEEDED</fullName>
                <label>Necessita de Ajuda</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>