force-app/main/default/objects/Case/fields/ForSaleFlow__c.field-meta.xml
<CustomField>
    <fullName>ForSaleFlow__c</fullName>
    <label>ForSale Flow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FS_Stage</valueSetName>
    </valueSet>
</CustomField>