force-app/main/default/objects/Case/fields/FS_AVE_HaveDemandNote__c.field-meta.xml
<CustomField>
    <fullName>FS_AVE_HaveDemandNote__c</fullName>
    <label>Nota de Exigência (Averbação)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FS_CRI_Have_Demand_Note</valueSetName>
    </valueSet>
</CustomField>