force-app/main/default/objects/Case/fields/FS_AVE_Protocol__c.field-meta.xml
<CustomField>
    <fullName>FS_AVE_Protocol__c</fullName>
    <label>Protocolo (Averbação)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>