force-app/main/default/objects/Case/fields/FS_AVE_RequestDate__c.field-meta.xml
<CustomField>
    <fullName>FS_AVE_RequestDate__c</fullName>
    <label>Data da Solicitação (Averbação)</label>
    <type>Date</type>
</CustomField>