force-app/main/default/objects/Case/fields/FS_BalancePaymentMade__c.field-meta.xml
<CustomField>
    <fullName>FS_BalancePaymentMade__c</fullName>
    <label>Pagamento do Saldo Realizado?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesOrNo</valueSetName>
    </valueSet>
</CustomField>