force-app/main/default/objects/Case/fields/FS_BookkeepingCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>FS_BookkeepingCompletionDate__c</fullName>
    <formula>IF(
   TEXT(CRNStatus__c) = &apos;DEED_SIGNED&apos;, TODAY(), NULL
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data da finalização da escrituração</label>
    <type>Date</type>
</CustomField>