force-app/main/default/objects/Case/fields/FS_BY_KeyDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>FS_BY_KeyDeliveryDate__c</fullName>
    <label>[BY] Data da Entrega das Chaves</label>
    <type>Date</type>
</CustomField>