force-app/main/default/objects/Case/fields/FS_BYNextContactDate__c.field-meta.xml
<CustomField>
    <fullName>FS_BYNextContactDate__c</fullName>
    <label>Próxima Data do Contato - Buyer</label>
    <type>Date</type>
</CustomField>