force-app/main/default/objects/Case/fields/FS_CanceledReason__c.field-meta.xml
<CustomField>
    <fullName>FS_CanceledReason__c</fullName>
    <label>Motivo de Cancelamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NotFollowWithPartnerRegistry</fullName>
                <label>Não seguiu com CRN parceiro</label>
            </value>
            <value>
                <fullName>PaymentMethodNotInCash</fullName>
                <label>Meio de pagamento não é mais A Vista</label>
            </value>
            <value>
                <fullName>HouseRegistryNotMustBeUpdated</fullName>
                <label>Matrícula não precisa ser averbada</label>
            </value>
            <value>
                <fullName>DontContinueWithFiduciary</fullName>
                <label>Não possui alienação fiduciária</label>
            </value>
            <value>
                <fullName>PaymentMethodNotFinanced</fullName>
                <label>Meio de pagamento não é mais Financiado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>