force-app/main/default/objects/Case/fields/FS_CancelledNotFollowingCRN__c.field-meta.xml
<CustomField>
    <fullName>FS_CancelledNotFollowingCRN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancelado Por Não Seguir com o CRN?</label>
    <type>Checkbox</type>
</CustomField>