force-app/main/default/objects/Case/fields/FS_CCVSigned__c.field-meta.xml
<CustomField>
    <fullName>FS_CCVSigned__c</fullName>
    <label>CCV Assinado em</label>
    <type>DateTime</type>
</CustomField>