force-app/main/default/objects/Case/fields/FS_ConcomitantRegistration__c.field-meta.xml
<CustomField>
    <fullName>FS_ConcomitantRegistration__c</fullName>
    <label>Simultâneo ao Registro?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesOrNo</valueSetName>
    </valueSet>
</CustomField>