force-app/main/default/objects/Case/fields/FS_ContinueWithPartnerRegistry__c.field-meta.xml
<CustomField>
    <fullName>FS_ContinueWithPartnerRegistry__c</fullName>
    <label>Vai Seguir Com Cartório Parceiro?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesOrNo</valueSetName>
    </valueSet>
</CustomField>