force-app/main/default/objects/Case/fields/FS_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>FS_CreatedDate__c</fullName>
    <description>CAMPO DESTINADO PARA CASOS DE CRN DO FORSALE</description>
    <label>Data de Criação (ForSale)</label>
    <type>DateTime</type>
</CustomField>