force-app/main/default/objects/Case/fields/FS_CreatedSequence__c.field-meta.xml
<CustomField>
    <fullName>FS_CreatedSequence__c</fullName>
    <label>Sequência de Criação</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>