force-app/main/default/objects/Case/fields/FS_CRI_Password__c.field-meta.xml
<CustomField>
    <fullName>FS_CRI_Password__c</fullName>
    <label>Senha</label>
    <length>255</length>
    <type>Text</type>
</CustomField>