force-app/main/default/objects/Case/fields/FS_CRI_Protocol__c.field-meta.xml
<CustomField>
    <fullName>FS_CRI_Protocol__c</fullName>
    <label>Protocolo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>