force-app/main/default/objects/Case/fields/FS_CRI_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_CRI_Request_Date__c</fullName>
    <label>Data da Solicitação</label>
    <type>Date</type>
</CustomField>