force-app/main/default/objects/Case/fields/FS_CRI_RequestDate__c.field-meta.xml
<CustomField>
    <fullName>FS_CRI_RequestDate__c</fullName>
    <label>Data da Solicitação</label>
    <type>Date</type>
</CustomField>