force-app/main/default/objects/Case/fields/FS_CRIName__c.field-meta.xml
<CustomField>
    <fullName>FS_CRIName__c</fullName>
    <label>Nome do CRI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>