force-app/main/default/objects/Case/fields/FS_CRIStatus__c.field-meta.xml
<CustomField>
    <fullName>FS_CRIStatus__c</fullName>
    <formula>IF(ISPICKVAL(ForSaleFlow__c, &apos;CRI&apos;), TEXT(PurchaseSaleContract__r.FS_CRIStatus__c), &apos;&apos;)</formula>
    <label>Status do CRI</label>
    <type>Text</type>
</CustomField>