force-app/main/default/objects/Case/fields/FS_CRNPartner__c.field-meta.xml
<CustomField>
    <fullName>FS_CRNPartner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRN Parceiro</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Casos (CRN Parceiro)</relationshipLabel>
    <relationshipName>CasePartner</relationshipName>
    <type>Lookup</type>
</CustomField>