force-app/main/default/objects/Case/fields/FS_CRNPartnerName__c.field-meta.xml
<CustomField>
    <fullName>FS_CRNPartnerName__c</fullName>
    <label>Nome do CRN Parceiro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>