force-app/main/default/objects/Case/fields/FS_DDAcceptedDate__c.field-meta.xml
<CustomField>
    <fullName>FS_DDAcceptedDate__c</fullName>
    <label>Data de aceite da DD</label>
    <type>Date</type>
</CustomField>