force-app/main/default/objects/Case/fields/FS_EndorsementStatus__c.field-meta.xml
<CustomField>
    <fullName>FS_EndorsementStatus__c</fullName>
    <label>Status da Averbação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não Iniciada</fullName>
                <default>true</default>
                <label>Não Iniciada</label>
            </value>
            <value>
                <fullName>Aguardando Vendedor Solicitar Averbação</fullName>
            </value>
            <value>
                <fullName>Solicitada</fullName>
            </value>
            <value>
                <fullName>Finalizada</fullName>
            </value>
            <value>
                <fullName>CANCELED</fullName>
                <label>Cancelado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>