force-app/main/default/objects/Case/fields/FS_FID_AlienationStatus__c.field-meta.xml
<CustomField>
    <fullName>FS_FID_AlienationStatus__c</fullName>
    <label>Status da Alienação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FS_FID_AlienationStatus</valueSetName>
    </valueSet>
</CustomField>